
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-2132] Reverting commit in r7125 due to side issue caused by fix in it
- Hardened security on some file download actions in mgr such as console output, phpinfo, properties export
- Adjusted setup expiry to 15 minutes
- [#MODX-2139] Added message to display if setup has to restart due to timeout
- [#MODX-2140] Fixed welcome page to point to static page rather than atlassian stack
- Update Help URLs to new base url for docs
- Some UI tweaks to lexicon grid, added reset() JS method to MODx.Window for shorter code
- Added in create entry to lexicon management
- Ensure $modx is available in custom TV renders
- [#MODX-2137] Fixed bug in image TV output render
- [#MODX-2138] Fixed textarea bug in system settings
- Allow MODx tags in TV descriptions in input renders, but prevent HTML tags
- Fixed bug where output render type was being ignored
- Ensure tv data isnt sent back in resource update processor, to prevent escaping problems with richtext tvs
- [#MODX-2109] Fixed setup to have upgrade mode not go to editing database/contexts, only advanced upgrade goes there
- Fix object caching bug in modAccessibleObject::_loadCollectionInstance()
- Update xPDO 2.0 to revision 429
- Ensure extended fields can be added to users with none pre-existing
- [#MODX-2131] Fixed other issues with TV values and rendering
- Added ctrl+alt+p key shortcut when updating a Resource to preview it
- Prevent illegal drops of actions to menus, menus to actions, in trees on Actions page
- Slight fixes, tweaks to plugin events grid
- [#MODX-2130] Fixed typos and missing references in mb-based output filters
- [#MODX-2131] Fixed various issues with TV rendering, values, and in multiple contexts