@@ -24,7 +24,14 @@ $o = '';
 $props = array();
 foreach ($properties as $k => $property) {
     $xtype = 'textfield';
-    if (is_array($property) && !empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
+    if (is_array($property) && !empty($property['lexicon'])) {
+        if (strpos($property['lexicon'],':') !== false) {
+            $modx->lexicon->load('en:'.$property['lexicon']);
+        } else {
+            $modx->lexicon->load('en:core:'.$property['lexicon']);
+        }
+        $modx->lexicon->load($property['lexicon']);
+    }
     $desc = $modx->lexicon($property['desc']);
 
     if (is_array($property)) {
