@@ -27,7 +27,14 @@ $data = array();
 /* put in default properties for element */
 if (isset($default) && is_array($default)) {
     foreach ($default as $property) {
-        if (!empty($property['lexicon'])) $modx->lexicon->load($property['lexicon']);
+        if (!empty($property['lexicon'])) {
+            if (strpos($property['lexicon'],':') !== false) {
+                $modx->lexicon->load('en:'.$property['lexicon']);
+            } else {
+                $modx->lexicon->load('en:core:'.$property['lexicon']);
+            }
+            $modx->lexicon->load($property['lexicon']);
+        }
         $data[$property['name']] = array(
             $property['name'],
             $modx->lexicon($property['desc']),
@@ -50,10 +57,18 @@ foreach ($properties as $property) {
     if (!isset($data[$property['name']]) && isset($scriptProperties['element'])) {
         $overridden = 2;
     }
+    if (!empty($property['lexicon'])) {
+        if (strpos($property['lexicon'],':') !== false) {
+            $modx->lexicon->load('en:'.$property['lexicon']);
+        } else {
+            $modx->lexicon->load('en:core:'.$property['lexicon']);
+        }
+        $modx->lexicon->load($property['lexicon']);
+    }
 
     $data[$property['name']] = array(
         $property['name'],
-        $property['desc'],
+        $modx->lexicon($property['desc']),
         $property['type'],
         $property['options'],
         $property['value'],
